feat(auth): implement email verification with status update and resend functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ jwt.access-expiration=${JWT_ACCESS_EXPIRATION_MS}
 jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION_MS}
 
 # OAuth2 Redirect URI
-app.oauth2.redirect-uri=${FRONTEND_URL}/oauth2/redirect
+app.oauth2.redirect-uri=${FRONTEND_URL}/oauth/callback
 
 # OAuth2 Google
 spring.security.oauth2.client.registration.google.client-id=${OAUTH2_GOOGLE_CLIENT_ID}
