--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,9 @@ services:
     image: redis:alpine
     container_name: oj-redis
     restart: always
+    env_file: .env
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
     ports:
       - "${REDIS_LOCAL_PORT}:6379"
     command: redis-server --requirepass ${REDIS_PASSWORD}
