--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,7 +37,7 @@ spring:
     redis:
       host: ${REDIS_HOST:localhost}
       port: ${REDIS_LOCAL_PORT:6379}
-      # password: ${REDIS_PASSWORD:} # Nếu có pass thì bỏ comment
+      password: ${REDIS_PASSWORD:}
 
     # --- MONGODB (Discussion, Comment) ---
     mongodb:
@@ -72,6 +72,23 @@ spring:
             scope:
               - user:email
               - read:user
+
+  # ==============================================================
+  # 5. MAIL CONFIGURATION
+  # Gửi email (xác nhận tài khoản, đặt lại mật khẩu, thông báo)
+  # ==============================================================
+  mail:
+    from: ${MAIL_FROM}
+    host: ${MAIL_HOST}
+    port: ${MAIL_PORT}
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
 # ==============================================================
 # 5. CUSTOM CONFIG (MinIO) - Lưu file
