Feature/module auth
* feat(auth): implement register, login, refresh, and logout APIs with JWT and cookie support

- Add register, login, refresh token, and logout endpoints
- Use JWT for accessToken and refreshToken
- Store tokens in cookies
- Basic exception handling and user validation

* feat(auth): implement blacklist accessToken into redis

* feat(auth): implement email verification with status update and resend functionality

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,7 +37,7 @@ spring:
     redis:
       host: ${REDIS_HOST:localhost}
       port: ${REDIS_LOCAL_PORT:6379}
-      # password: ${REDIS_PASSWORD:} # Nếu có pass thì bỏ comment
+      password: ${REDIS_PASSWORD:}
 
     # --- MONGODB (Discussion, Comment) ---
     mongodb:
@@ -54,12 +54,41 @@ spring:
     password: ${RABBITMQ_DEFAULT_PASS:guest}
 
   # ==============================================================
-  # 4. SECURITY (Cấu hình tạm để test API)
+  # 4. SECURITY & OAUTH2
   # ==============================================================
   security:
-    user:
-      name: admin
-      password: admin
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID:your-google-client-id}
+            client-secret: ${GOOGLE_CLIENT_SECRET:your-google-client-secret}
+            scope:
+              - email
+              - profile
+          github:
+            client-id: ${GITHUB_CLIENT_ID:your-github-client-id}
+            client-secret: ${GITHUB_CLIENT_SECRET:your-github-client-secret}
+            scope:
+              - user:email
+              - read:user
+
+  # ==============================================================
+  # 5. MAIL CONFIGURATION
+  # Gửi email (xác nhận tài khoản, đặt lại mật khẩu, thông báo)
+  # ==============================================================
+  mail:
+    from: ${MAIL_FROM}
+    host: ${MAIL_HOST}
+    port: ${MAIL_PORT}
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
 # ==============================================================
 # 5. CUSTOM CONFIG (MinIO) - Lưu file
